test env example

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 MYSQL_HOST=localhost
 MYSQL_USER=root
 MYSQL_PASSWORD=
+MYSQL_DBNAME=trend_db
 
 BITKUB_HOST=https://api.bitkub.com
 BITKUB_KEY=26c008f5c4233b4b07ba17fb08e6a51f
