--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-MYSQL_HOST=192.168.101.217
+MYSQL_HOST=localhost
 MYSQL_USER=root
-MYSQL_PASSWORD=admin@spl
+MYSQL_PASSWORD=
 MYSQL_DBNAME=trend_db
 
 BITKUB_HOST=https://api.bitkub.com
