เพิ่ม binance api

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ BITKUB_HOST=https://api.bitkub.com
 BITKUB_KEY=
 BITKUB_SECRET=
 
+ฺBINANCE_HOST=https://api.binance.com
+ฺBINANCE_KEY=
+ฺBINANCE_SECRET=
+
 MYSQL_HOST=localhost
 MYSQL_USER=root
 MYSQL_PASSWORD=
