--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,9 @@ MYSQL_DBNAME=trend_db
 
 COST=50
 EXCHANGE_VAT=0.25
-PROFIT_PERCENT=4
-STRONG_PERCENT=4
+STRONG_BITKUB_PERCENT=4
+STRONG_BNB_PERCENT=1
+PROFIT_PERCENT=10
 STOP_LOSS=4
 
 LINE_NOTI_TOKEN=2JsycARKDaWfSqW4YQbhDajS6K3yjggbHpnPtGiCwmH
