update line notifi

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,4 @@ PROFIT_PERCENT=10
 STOP_LOSS=4
 
 LINE_NOTI_TOKEN=2JsycARKDaWfSqW4YQbhDajS6K3yjggbHpnPtGiCwmH
+LINE_BNB_TOKEN=TScSRZcgei7uqrAmZXVwTKhsjlYb4vZbtKOJAby3znA
